--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -86,13 +86,18 @@ body {
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
+  /* color: rgb(var(--foreground-rgb)); */
+  /* background: linear-gradient(
       to bottom,
       transparent,
       rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+    ) */
+     background-color: #d2d2d2a3;
+    /* rgb(var(--background-start-rgb)); */
+    background-image: url('/logo.png') ;
+    background-repeat: no-repeat;
+    background-position: center;
+    height: 100vh;
 }
 
 a {
