--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -98,6 +98,7 @@ body {
     background-repeat: no-repeat;
     background-position: center;
     height: 100vh;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 a {
