style: styling space between columns and diplay in the center

--- a/src/styles/containerColumns.module.css
+++ b/src/styles/containerColumns.module.css
@@ -1,9 +1,10 @@
 .containerColumns {
     display: flex;
     align-items: flex-start;
-    justify-content: start;
+    justify-content: center;
     gap: 16x;
     padding: 24px 32px;
     height: 100%;
     overflow: auto;
+    flex-wrap: wrap;
 }
