--- a/src/styles/containerColumns.module.css
+++ b/src/styles/containerColumns.module.css
@@ -1,7 +1,7 @@
 .containerColumns {
     display: flex;
     align-items: flex-start;
-    justify-content: center;
+    justify-content: flex-start;
     gap: 16x;
     padding: 24px 32px;
     height: 100%;
