--- a/src/styles/card.module.css
+++ b/src/styles/card.module.css
@@ -3,6 +3,9 @@
     box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.15);
     padding: 12px;
     border-radius: 4px;
+    margin-left: 8px;
+    margin-right: 8px;
+    margin-bottom: 12px;
 }
 
 .text {
