--- a/src/styles/card.module.css
+++ b/src/styles/card.module.css
@@ -23,3 +23,28 @@
     justify-content: space-between;
     flex-direction: row;
 }
+
+.menu > ul > button {
+    list-style: none;
+    margin: 5px;
+    background-color: #90caf9;
+    border-radius: 3px;
+    font-size: 15px;
+    border-style: none;
+    padding: 5px 5px 5px 5px;
+    cursor: pointer;
+}
+
+.menu > ul > button:hover {
+    opacity: 0.5;
+}
+
+.menu {
+    position: absolute;
+    display: none;
+    background-color: #eeeeee;
+    height: fit-content;
+    width: 120px;
+    border-radius: 5px;
+    padding: 10px;
+}
