--- a/src/styles/card.module.css
+++ b/src/styles/card.module.css
@@ -6,11 +6,13 @@
     margin-left: 8px;
     margin-right: 8px;
     margin-bottom: 12px;
+    width: 240px;
 }
 
 .text {
-    font-size: 16px;
+    font-size: 14px;
     margin-bottom: 5px;
+    /* width: 50px; */
 }
 
 .hr {
@@ -33,6 +35,7 @@
     border-style: none;
     padding: 5px 5px 5px 5px;
     cursor: pointer;
+    display: block;
 }
 
 .menu > ul > button:hover {
