--- a/src/styles/column.module.css
+++ b/src/styles/column.module.css
@@ -9,8 +9,8 @@
     min-height: 120px;
     width: 330px;
     margin: 12px;
-    overflow-y: auto;
-    max-height: 500px;
+    /* overflow-y: auto; */
+    /* max-height: 500px; */
 }
 
 .heading {
@@ -19,7 +19,7 @@
 }
 
 .containerHeader {
-    position: sticky;
+    position: relative;
     top: 0;
     background-color: #f4f4f4;
     padding: 12px;
