--- a/src/styles/containerColumns.module.css
+++ b/src/styles/containerColumns.module.css
@@ -1,10 +1,11 @@
 .containerColumns {
     display: flex;
     align-items: flex-start;
-    justify-content: center;
+    /* justify-content: center; */
     gap: 16x;
     padding: 24px 32px;
-    height: 100%;
-    overflow: auto;
-    flex-wrap: wrap;
+    height: 100vh;
+    overflow-x: auto;
+    white-space: nowrap;
+    /* flex-wrap: wrap; */
 }
